live feed update
bug fix with live feed and minor updates.

--- a/app/templates/camera/livefeed.html
+++ b/app/templates/camera/livefeed.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}EYECAM - {{ camNum }}{% endblock %}
+{% block title %}EYECAM{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>{{ camNum }}</h1>
+    <h2>{{ camNum }}</h2>
 </div>
 <div>
 	<img src="{{ url_for('camera.video_feed') }}" />
