--- a/app/templates/camera/livefeed.html
+++ b/app/templates/camera/livefeed.html
@@ -8,7 +8,7 @@
     <h2>{{ camNum }}</h2>
 </div>
 <div>
-	<img src="{{ url_for('camera.video_feed') }}" />
+	<img src="{{ url_for('camera.video_feed', camNum=camNum) }}" />
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
