--- a/app/templates/camera/livefeed.html
+++ b/app/templates/camera/livefeed.html
@@ -6,11 +6,13 @@
 {% block page_content %}
 <div class="page-header">
     <h2>{{ camNum }}</h2>
+    <div>
+      <li class="camera">
+         <a href="{{ url_for('camera.settings', camNum=camNum) }}">{{ camNum }} Settings</a>
+      </li>
+   </div>
 </div>
 <div>
-	<img src="{{ url_for('camera.video_feed', camNum=camNum) }}" />
-</div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
+   <img src="{{ url_for('camera.videofeed', camNum=camNum) }}" />
 </div>
 {% endblock %}
